--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
       </ul>
   
       <div class="social-links">
-        <a href="https://github.com/yourgithub" target="_blank">GitHub</a>
+        <a href="https://github.com/aslammhd" target="_blank">GitHub</a>
         <a href="https://linkedin.com/in/aslam-mhd" target="_blank">LinkedIn</a>
         <a href="mailto:aslammuhammed91324@gmail.com.com">Email Me</a>
       </div>
