make skills responsive

--- a/skills.html
+++ b/skills.html
@@ -26,10 +26,10 @@
     <div style="display: flex; flex-direction: column; justify-content: center;align-items: center;">
 
       <h1><span style="color: orangered;">MY</span> SKILLS</h1>
-      <div style="display: flex;  justify-content: center;align-items: center; padding: 5%;">
+      <div class= "skillbox" >
         <img width="50%" height="50%" src="images/programming.jpeg" alt="Skills" />
 
-        <div style="width:500px;padding: 5%;">
+        <div class="choraskill">
           <p>HTML - 80%</p>
           <div class="bar">
             <div style="width: 80%;"></div>
