--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,12 @@
 </head>
 <body>
   <header>
-    <nav>
-      <ul>
+  
+    <input type="checkbox" id="menu-toggle" />
+    <label for="menu-toggle" class="hamburger">&#9776;</label>
+  
+    <nav class="navbar">
+      <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="skills.html">Skills</a></li>
