--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
   <header>
+    
+  <input type="checkbox" id="menu-toggle" />
+  <label for="menu-toggle" class="hamburger">&#9776;</label>
+
     <nav class="navbar">
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
